# attpc_label_trace

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.js  api.ts  env.d.ts  main.ts  router.ts  styles.css  types.ts
frontend/src/components/: AddLabelDialog.vue  AddStrangeLabelDialog.vue  DeleteLabelDialog.vue  DeleteStrangeLabelDialog.vue  LabelSummaryPanel.vue  MainNavRail.vue  MappingCanvas.vue  MappingRuleDialog.vue  ResultPlot.vue  SidebarSummary.vue  TracePlot.vue
frontend/src/lib/: plotly.ts
frontend/src/plugins/: vuetify.ts
frontend/src/stores/: app.js  histograms.ts  label.ts  review.ts  shell.ts
frontend/src/views/: HistogramView.vue  LabelView.vue  MappingView.vue  TraceReviewView.vue  WelcomeView.vue
notebooks/: labeled_cdf_hist.ipynb  traces_cdf_hist.ipynb
src/attpc_estimator/: server.py
src/attpc_estimator/cli/: amplitude.py  cdf.py  config.py  estimate_relabel.py  filter.py  progress.py  relabel.py  webui.py
src/attpc_estimator/detector/: pads.csv  pads.json
src/attpc_estimator/model/: __init__.py  label.py  trace.py
src/attpc_estimator/process/: __init__.py  amplitude.py  cdf.py  estimate_relabel.py  filter.py  labeled.py  progress.py  relabel.py  trace_scan.py
src/attpc_estimator/service/: __init__.py  estimator.py  histogram_jobs.py  histograms.py  labeling.py
src/attpc_estimator/service/traces/: __init__.py  loader.py  navigation.py  payload.py  prefetch.py  selection.py  source.py
src/attpc_estimator/storage/: __init__.py  labeled_traces.py  labels_db.py  run_paths.py
src/attpc_estimator/utils/: label_keys.py  trace_data.py
src/trace_label/: __init__.py  __main__.py  api.py  app_factory.py  batch.py  batch_labeled.py  cli_config.py  db.py  input_reader.py  models.py  plot_batch.py  services.py
tests/: hdf5_fixtures.py  test_batch.py  test_batch_labeled.py  test_batch_relabel_and_peaks.py  test_estimator_service.py  test_histogram_jobs.py  test_histograms.py  test_input_reader.py  test_main.py  test_plot_batch.py  test_process_labeled.py  test_process_run.py  test_server.py  test_services.py  test_trace_selection.py  test_trace_source.py  test_utils_path.py
tools/mapping/: join_pads_data.py
tools/mapping/config/: padupdown.csv  rcnp_map.csv
tools/mapping/notebooks/: pad_direction.ipynb  pad_distance.ipynb
