[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "attpc-estimator"
version = "0.1.0"
description = "Local trace labeling app with FastAPI, Vue, and Plotly"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "h5py>=3.16.0",
  "ipykernel>=7.2.0",
  "ipympl>=0.10.0",
  "matplotlib>=3.10,<4.0",
  "numba>=0.62,<1.0",
  "numpy>=2.4.3",
  "scipy>=1.17.1",
  "tqdm>=4.67,<5.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
]

[project.scripts]
amplitude = "attpc_estimator.cli.amplitude:main"
cdf = "attpc_estimator.cli.cdf:main"
filter = "attpc_estimator.cli.filter:main"
relabel = "attpc_estimator.cli.relabel:main"
webui = "attpc_estimator.cli.webui:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
